2012-03-23  Janne Blomqvist  <jb@gcc.gnu.org>

	* gfortran.h (GFC_MAX_LINE): Remove unused macro.

2012-03-19  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR fortran/52559
	* error.c (gfc_widechar_display_length): Consider tabs as
	one character wide, as they're displayed as spaces.
	(show_locus): Move tab handling to...
	(print_wide_char_into_buffer): ... here.

2012-03-17  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52585
	* trans-intrinsic.c (gfc_conv_associated): Fix handling of
	procpointer dummy arguments.

2012-03-16  Janne Blomqvist  <jb@gcc.gnu.org>

	* trans-intrinsic.c (build_round_expr): Don't use BUILT_IN_IROUND
	for __float128.

2012-03-15  Janne Blomqvist  <jb@gcc.gnu.org>

	* f95-lang.c (gfc_init_builtin_functions): Initialize
	BUILT_IN_IROUND.
	* mathbuiltins.def: Add IROUND.
	* trans-intrinsic.c (build_round_expr): Use BUILT_IN_IROUND if
	type size matches.
	(gfc_build_intrinsic_lib_fndecls): Build iround functions.

2012-03-12  Richard Guenther  <rguenther@suse.de>

	* f95-lang.c (builtin_type_for_size): Use gfc_type_for_size.

2012-03-12  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52542
	* decl.c (match_procedure_decl): If the interface
	is bind(C), the procedure is as well.

2012-03-10  Steven Bosscher  <steven@gcc.gnu.org>

	* convert.c (convert): Fold BOOLEAN_TYPE types to the proper variant.

2012-03-09  Steven Bosscher  <steven@gcc.gnu.org>

	* Make-lang.in (convert.o): Depend on convert.h.
	* convert.c: Header and comment cleanups.
	(gfc_thruthvalue_conversion): Rename static function
	to truthvalue_conversion.  Do not use 'internal_error' from here,
	use 'gcc_unreachable' instead.
	(convert): Do not use 'error' for conversions to void, use
	'gcc_unreachable' instead.  Likewise for conversions to non-scalar
	types.  Do not hanlde ENUMERAL_TYPE, the front end never creates them.
	Clean up #if 0 code.

2012-03-08  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52469
	* trans-types.c (gfc_get_function_type): Handle backend_decl