@@ -1,3 +1,12 @@
+2012-03-28  Paul Thomas  <pault@gcc.gnu.org>
+	Tobias Burnus  <burnus@gcc.gnu.org>
+
+	PR fortran/52652
+	* match.c (gfc_match_allocate, gfc_match_deallocate): Change
+	"not.. or" to "neither.. nor".
+	* parse.c (decode_specification_statement): Correct error in
+	chpice of matching function for "allocatable". 
+
 2012-03-23  Janne Blomqvist  <jb@gcc.gnu.org>
 
 	* gfortran.h (GFC_MAX_LINE): Remove unused macro.
